[package]
name = "testkit-async-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Proc macros for testkit-async"
repository = "https://github.com/yourusername/testkit-async"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
